# logging-extended-handlers

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test-logging-extended-handlers.yml
src/logging_extended_handlers/: __init__.py
tests/manual/: test_http_handler.py  test_smtp_handler.py
